fixed meta viewport for mobile. fixed article width on firefox

--- a/app/javascript/css/article.scss
+++ b/app/javascript/css/article.scss
@@ -1,11 +1,11 @@
 @import 'sharebuttons';
 
 .article {
+  align-self: stretch;
   display: flex;
   flex-direction: column;
   margin-left: 5px;
   margin-right: 5px;
-  align-self: center;
   font-size: 24px;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .article__article {
-  align-self: center;
+  align-self: stretch;
   background-color: #faf6f6;
   margin-top: 15px;
   // max-width: 32em;
